# bassline-junkie

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_INTERFACE.md  build.sh  init.sh
bassline-junkie/: .cproject  .gitignore  .project  CMakeLists.txt  bassline-junkie arm_debug.launch  bassline-junkie tests_build.launch  bassline-junkie x86_debug.launch  bassline-junkie x86_tests.launch  bassline-junkie.launch  build.sh  plot.py  plot_spectrum.py  plot_wavefile.py  run.sh
bassline-junkie/arm_debug/: .gitignore  makefile  objects.mk  sources.mk
bassline-junkie/arm_debug/src/synth/: subdir.mk
bassline-junkie/arm_debug/src/synth/dsp/: subdir.mk
bassline-junkie/arm_debug/src/synth/dsp/ADSR/: subdir.mk
bassline-junkie/arm_debug/src/synth/dsp/PolyBLEPOscillator/: subdir.mk
bassline-junkie/arm_debug/src/synth/engines/: subdir.mk
bassline-junkie/arm_debug/src/synth/utils/: subdir.mk
bassline-junkie/arm_tests/: makefile  sources.mk
bassline-junkie/arm_tests/src/tests/: subdir.mk
bassline-junkie/clang arm/: makefile  objects.mk  sources.mk
bassline-junkie/clang arm/src/synth/: subdir.mk
bassline-junkie/clang arm/src/synth/dsp/: subdir.mk
bassline-junkie/clang arm/src/synth/dsp/ADSR/: subdir.mk
bassline-junkie/clang arm/src/synth/dsp/PolyBLEPOscillator/: subdir.mk
bassline-junkie/clang arm/src/synth/utils/: subdir.mk
bassline-junkie/pd/: comport.pd_linux  eight_params.pd  five_params.pd  four_params.pd  pies2serial.pd  seq.pd  six_params.pd  two_params.pd
bassline-junkie/src/: AudioDevice.cpp  AudioDevice.h  PerformanceCounter.cpp  PerformanceCounter.h  Plot.h  Timer.cpp  Timer.h  bassline-junkie.cpp  concurency_helpers.h  cpucounter.cpp  gnuplot-iostream.h  synth.cpp  synth.h  wavwriter.cpp
bassline-junkie/src/synth/: AudioDevice.cpp  CMakeLists.txt  MidiReceiver.cpp  MidiReceiver.h  MoogFilter.cpp  bassline-junkie.cpp  concurency_helpers.h  config.h  cpucounter.cpp  cpucounter.h  modifiers.h  synth.cpp  synth.h  voice.cpp  voice.h  wavwriter.cpp  wavwriter.h
bassline-junkie/src/synth/dsp/: BlitSaw.cpp  BlitSaw.h  BlitSquare.cpp  BlitSquare.h  FilterTemplate.h  Lfo.cpp  Lfo.h  MinBLEPOscillator.cpp  MinBLEPOscillator.h  MoogFilter.cpp  MoogFilter.h  Noise.cpp  Noise.h  Osc.cpp  Osc.h  SineWave.cpp  SineWave.h  SoftClipper.cpp  SoftClipper.h  VAStateVariableFilter.cpp  VAStateVariableFilter.h  WavetableOscillator.cpp  WavetableOscillator.h  fast_trig.h
bassline-junkie/src/synth/dsp/ADSR/: ADSR.cpp  ADSR.h  ADSR_.h
bassline-junkie/src/synth/dsp/PolyBLEP/: PolyBLEP.cpp  PolyBLEP.h
bassline-junkie/src/synth/dsp/PolyBLEPOscillator/: Oscillator.cpp  Oscillator.h  PolyBLEPOscillator.cpp  PolyBLEPOscillator.h
bassline-junkie/src/synth/engines/: ConditionalVar.cpp  ConditionalVar.h  Engine.h  conditional_variable.h  engine.h  serial.cpp  serial.h  serial_sleep.cpp  serial_sleep.h  sharedfutures.cpp  sharedfutures.h  sharedfutures_sleep.cpp  sharedfutures_sleep.h  thread.h
bassline-junkie/src/synth/utils/: AudioDevice.cpp  AudioDevice.h  AudioDeviceRt.cpp  AudioDeviceRt.h  Logger.h  MidiMessage.h  MidiParser.cpp  MidiParser.h  MidiReceiver.cpp  MidiReceiver.h  MidiReceiverRt.cpp  MidiReceiverRt.h  RtMidiReceiver.cpp  RtMidiReceiver.h  SerialReceiver.cpp  SerialReceiver.h  array_writer.cpp  array_writer.h  clipping.h  concurency_helpers.h  cpucounter.cpp  cpucounter.h  wav_writer.h  wavwriter.cpp  wavwriter.h
bassline-junkie/src/tests/: CMakeLists.txt  bench.cpp  sweep.cpp  wav_writer.h
bassline-junkie/src/tests/benchmark_osc/: CMakeLists.txt  bench.cpp
bassline-junkie/src/tests/osc_benchmark/: CMakeLists.txt  osc_bench.cpp
bassline-junkie/src/tests/render_sweeps/: CMakeLists.txt  sweep.cpp
bassline-junkie/src/tests/sin_benchmark/: CMakeLists.txt  bench.cpp  plot.py  sin_bench.cpp
bassline-junkie/src/tests/sin_benchmark/impl/: fastSin.h  fast_sin.h  fast_sin_w_round.h  sin_taylor.h  std_sin.h
bassline-junkie/x86_debug/: .gitignore  makefile  objects.mk  sources.mk
bassline-junkie/x86_debug/src/synth/: subdir.mk
bassline-junkie/x86_debug/src/synth/dsp/: subdir.mk
bassline-junkie/x86_debug/src/synth/dsp/ADSR/: subdir.mk
bassline-junkie/x86_debug/src/synth/dsp/PolyBLEPOscillator/: subdir.mk
bassline-junkie/x86_debug/src/synth/engines/: subdir.mk
bassline-junkie/x86_debug/src/synth/utils/: subdir.mk
bassline-junkie/x86_release/: makefile  sources.mk
bassline-junkie/x86_release/src/synth/: subdir.mk
bassline-junkie/x86_release/src/synth/dsp/: .gitignore  subdir.mk
bassline-junkie/x86_release/src/synth/engines/: subdir.mk
bassline-junkie/x86_release/src/synth/utils/: subdir.mk
bassline-junkie/x86_tests/: makefile  objects.mk  sources.mk
bassline-junkie/x86_tests/src/tests/: subdir.mk
cmake/: FindALSA.cmake  aarch64-linux-toolchain.cmake  arm-linux-toolchain.cmake
cmake/benchmark/: CMakeLists.txt  CMakeLists.txt.in
cmake/gtest/: CMakeLists.txt  CMakeLists.txt.in
tests/: .cproject  .gitignore  plot.py
tests/Debug/: makefile
tests/Debug/src/: subdir.mk
tests/gcc_arm/: makefile  objects.mk
tests/gcc_arm/src/: subdir.mk
tests/src/: concurency_helpers.h  cpucounter.cpp  cpucounter.h  main.cpp  sin.cpp  tests.cpp
